Introduce deployment
Introduces a gitlab ci pipeline with
pushing to the gitlab package repository

Signed-off-by: Anton Oellerer <a.oellerer@docu-tools.com>